objects/Reference_Id__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to set custom ids instead of hard coding in process builder, formulas, etc.</description>
    <fields>
        <fullName>Agreement_3_Digit_Object_Reference__c</fullName>
        <label>Agreement 3 Digit Object Reference</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Negotiation_Email_Template_Id_NA__c</fullName>
        <label>Conga Negotiation Email Template Id - NA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Clause_and_Sub_Clause_Query__c</fullName>
        <label>Generic Clause and Sub-Clause Query</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Copado_EMEA__c</fullName>
        <label>MSA - Copado - EMEA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Copado_NA__c</fullName>
        <label>MSA - Copado - NA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Copado_NA__c</fullName>
        <label>NDA - Copado - NA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiation_CC_Emails__c</fullName>
        <description>Add email addresses here to cc people on the negotiation email that gets sent to customers.  If multiple, separate with a comma and NO spaces.</description>
        <label>Negotiation CC Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reference Id</label>
</CustomObject>